[package]
name = "luna-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
dotenv = "0.15.0"
minicaldav = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
ureq = "2.9"
url = "2.5"
